force-app/main/default/objects/Property_Review__c/Property_Review__c.object-meta.xml
<CustomObject>
    <label>Property Review</label>
    <pluralLabel>Property Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Review Number</label>
        <type>AutoNumber</type>
        <displayFormat>PR-{00000}</displayFormat>
    </nameField>
</CustomObject>