force-app/main/default/objects/Property_Review__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Detailed review comments</description>
    <inlineHelpText>Share the details of your experience with the property.</inlineHelpText>
    <label>Comment</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>