force-app/main/default/objects/Property_Review__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description>Reference to the related Property record</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Reviews</relationshipLabel>
    <relationshipName>Property_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>