force-app/main/default/objects/Property_Review__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Star rating given by the reviewer</description>
    <label>Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <required>true</required>
    <type>Number</type>
</CustomField>