force-app/main/default/objects/Property_Review__c/validationRules/Rating_Between_One_and_Five.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Between_One_and_Five</fullName>
    <active>true</active>
    <description>Ensure ratings are between 1 and 5</description>
    <errorConditionFormula>OR(Rating__c &lt; 1, Rating__c &gt; 5)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>